# SIES

./: .gitignore  CLAUDE.md  PLAN.md  README.md  install.sh  pyproject.toml
corpus/: README.md
docs/: genre-aware-bandpass.md  multimodal-contract.md
people/: README.md  ROUTINE.md  __init__.py  cards.py  daily.py  discover.py  enrich.py  pageviews.py  score.py  story.py  threads.py  trends.py  wikidata.py
sies/: __init__.py  ab.py  bench.py  candidate.py  chunk.py  corpus.py  dedup.py  embed.py  index.py  normalize.py  rank.py  replay.py  retrieve.py  search.py  stats.py  store.py  today.py  util.py
tests/: test_ab.py  test_chunk.py  test_corpus.py  test_daily.py  test_dedup.py  test_enrich.py  test_extract.py  test_normalize.py  test_rank.py  test_replay.py  test_score.py  test_store.py  test_story_cards.py  test_today.py
